[project]
name = "opensupportops"
version = "0.1.0"
description = "OpenSupportOps - customer support simulation environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]